--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.13.2",
     "cors": "^2.7.1",
     "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "passport": "^0.2.2",
-    "passport-goodreads": "^0.1.2"
+    "passport-goodreads": "^0.1.2",
+    "request": "^2.58.0"
   }
 }
