--- a/public/bower.json
+++ b/public/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "angularjs-datepicker": "~0.2.5"
+    "angularjs-datepicker": "~0.2.5",
+    "moment": "~2.10.3"
   }
 }
