--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "firebase": "^2.2.7",
     "mongoose": "^4.0.6",
     "passport": "^0.2.2",
     "passport-goodreads": "^0.1.2",
