--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/mikelblake/personal-project#readme",
   "dependencies": {
     "body-parser": "^1.13.2",
+    "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "firebase": "^2.2.7",
     "mongoose": "^4.0.6",
+    "mongoose-q": "^0.1.0",
     "passport": "^0.2.2",
     "passport-goodreads": "^0.1.2",
     "request": "^2.58.0"
