--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "passport": "^0.2.2",
     "passport-goodreads": "^0.1.2",
     "request": "^2.58.0"
+  },
+  "devDependencies": {
+    "forever-monitor": "^1.6.0"
   }
 }
